# thymos

./: .doxycfg  .editorconfig  .gitignore  LICENSE  Makefile  README.md  build.zig  build.zig.zon  flake.nix  limine.conf  meson.build  meson_options.txt
.github/workflows/: static.yml
docs/html/: annotated.html  annotated_dup.js  classcpu_1_1Idt-members.html  classcpu_1_1Idt.html  classdrivers_1_1Framebuffer-members.html  classdrivers_1_1Framebuffer.html  classes.html  common_8cpp_source.html  common_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_70d5e250c66d001b18da37689179cade.html  dir_70d5e250c66d001b18da37689179cade.js  dir_c718a368270b13c54d94892d20736f45.html  dir_c718a368270b13c54d94892d20736f45.js  dir_c8a62bf022585037896c8b78602a08d9.html  dir_c8a62bf022585037896c8b78602a08d9.js  doxygen_crawl.html  files.html  framebuffer_8cpp_source.html  framebuffer_8hpp_source.html  gdt_8cpp_source.html  gdt_8hpp_source.html  idt_8cpp_source.html  idt_8hpp_source.html  index.html  kernel_8cpp_source.html  navtreedata.js  navtreeindex0.js  pic_8cpp_source.html  pic_8hpp_source.html  structFont__t-members.html  structFont__t.html  utils_8cpp_source.html  utils_8hpp_source.html  x86__64_2common_8hpp_source.html
docs/html/search/: all_0.js  all_1.js  searchdata.js
fonts/: meson.build
include/: meson.build  ssfn.h
include/limine/: BOOTAA64.EFI  BOOTIA32.EFI  BOOTLOONGARCH64.EFI  BOOTRISCV64.EFI  BOOTX64.EFI  limine-bios-hdd.h  limine-bios.sys  limine.c
include/printf/: printf_config.h
scripts/: fetchDeps.sh  mkISO.sh
src/: asm.s  colors.zig  common.zig  compat.c  globals.zig  index.zig  kernel.cpp  kernel.zig  linker.ld  meson.build  root.zig  shell.zig  shellcmds.zig  utils.cpp  utils.hpp  utils.zig
src/arch/: README.md  arch.zig  common.hpp  index.zig
src/arch/aarch64/: linker.ld
src/arch/riscv64/: index.zig  linker.ld
src/arch/x86_64/: asm.s  common.cpp  common.hpp  gdt.cpp  gdt.hpp  gdt.zig  idt.cpp  idt.hpp  idt.zig  index.zig  linker.ld  pic.zig
src/arch/x86_64/cpu/: idt.zig
src/arch/x86_64/drivers/: pic.zig
src/cpu/: cpu.zig  gdt.zig  idt.zig  index.zig  io.zig
src/drivers/: drivers.zig  fb.cpp  fb.hpp  framebuffer.cpp  framebuffer.hpp  index.zig  keyboard.zig  pic.cpp  pic.zig  video.zig
src/kernel/: shell.zig  shellcmds.zig
src/libc/: mem.c  mem.h
src/memory/: pmm.zig
